Fixed navbar display on mobile devices

--- a/index.css
+++ b/index.css
@@ -25,15 +25,16 @@ img {
   max-height: auto;
 }
 
-nav ul li a {
+.nav_link a {
   position: relative;
   padding: 10px 19px;
   line-height: 50px;
   font-size: 15px;
   color: white;
+  font-weight: bold;
 }
 
-nav ul li a:hover {
+.nav_link a:hover {
   background: white;
   color: #2f5bea;
   border-radius: 6px;
@@ -540,11 +541,11 @@ input[type='submit'] {
     display: block;
   }
 
-  nav ul {
+  .nav-link {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.356);
+    background: rgba(0, 0, 0, 0.61);
     top: 80px;
     left: -100%;
     text-align: center;
@@ -553,13 +554,13 @@ input[type='submit'] {
     color: black;
   }
 
-  nav li {
+  .nav_link {
     display: block;
     margin: 50px;
     line-height: 30px;
   }
 
-  #check:checked ~ nav ul {
+  #check:checked ~ .nav-link {
     left: 0;
   }
 
@@ -575,14 +576,14 @@ input[type='submit'] {
 /*Media Query for Large Screens*/
 
 @media (min-width: 600px) {
-  nav ul,
+  .nav-link,
   .logo {
     position: fixed;
     right: 0;
     float: right;
     margin-right: 2rem;
   }
-  nav ul li {
+  .nav_link {
     display: inline-block;
     line-height: 75px;
     margin: 0 15px;
